Fix wrapping column issue on the home page.

--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -105,12 +105,12 @@
 /* Recent packages */
 
 .recent {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 
   ul {
     padding: 0;
+    max-width: 250px;
   }
 
   li {
@@ -122,7 +122,6 @@
 
 @media screen and (max-width: $mobile-breakpoint) {
   .recent {
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: 1fr;
   }
 }
